--- a/.gitignore
+++ b/.gitignore
@@ -116,6 +116,7 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 !.mvn/wrapper/maven-wrapper.jar
+!**/src/main/java/feign/target
 
 # End of https://www.gitignore.io/api/java,maven,intellij+iml
 
