Refactored Request, Header and Response into Generic Interfaces
Request, Response, and Header should be considered protocol agnostic
as feign doesn't really care if the request is HTTP, GRPC, SOAP, or
any other protocol.  However,the concepts are important, they have
been refactored into general interfaces and the current implementations have
been made HTTP specific.

--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,11 @@
           </executions>
         </plugin>
         <plugin>
+          <groupId>org.assertj</groupId>
+          <artifactId>assertj-assertions-generator-maven-plugin</artifactId>
+          <version>2.2.0</version>
+        </plugin>
+        <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
           <version>0.8.3</version>
