--- a/feignx-core/pom.xml
+++ b/feignx-core/pom.xml
@@ -60,6 +60,22 @@
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>org.assertj</groupId>
+        <artifactId>assertj-assertions-generator-maven-plugin</artifactId>
+        <configuration>
+          <targetDir>src/test/java</targetDir>
+          <classes>
+            <param>feign.http.HttpHeader</param>
+            <param>feign.http.HttpRequest</param>
+            <param>feign.http.Response</param>
+          </classes>
+          <generateAssertions>true</generateAssertions>
+          <generateBddAssertions>false</generateBddAssertions>
+          <generateSoftAssertions>false</generateSoftAssertions>
+          <generateJUnitSoftAssertions>false</generateJUnitSoftAssertions>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
