Adding Http Model Object Test Assertions
Generated some helpful `assertj` assertions for the Http Model objects,
`HttpRequest`, `HttpResponse`, and `HttpHeader`.

--- a/feignx-core/pom.xml
+++ b/feignx-core/pom.xml
@@ -65,10 +65,11 @@
         <artifactId>assertj-assertions-generator-maven-plugin</artifactId>
         <configuration>
           <targetDir>src/test/java</targetDir>
+          <generateAssertionsInPackage>feign.assertions</generateAssertionsInPackage>
           <classes>
             <param>feign.http.HttpHeader</param>
             <param>feign.http.HttpRequest</param>
-            <param>feign.http.Response</param>
+            <param>feign.http.HttpResponse</param>
           </classes>
           <generateAssertions>true</generateAssertions>
           <generateBddAssertions>false</generateBddAssertions>
