Enabling Circle CI (#12)
* Initial Circle CI Configuration

* Removed AssertJ generator plugin

--- a/pom.xml
+++ b/pom.xml
@@ -209,11 +209,6 @@
           </executions>
         </plugin>
         <plugin>
-          <groupId>org.assertj</groupId>
-          <artifactId>assertj-assertions-generator-maven-plugin</artifactId>
-          <version>2.2.0</version>
-        </plugin>
-        <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
           <version>0.8.3</version>
@@ -287,6 +282,7 @@
               <exclude>**/LICENSE</exclude>
               <exclude>**/NOTICE</exclude>
               <exclude>**/*.md</exclude>
+              <exclude>**/*.yml</exclude>
               <exclude>**/*.properties</exclude>
               <exclude>src/resources/**</exclude>
               <exclude>src/main/resources/**</exclude>
