--- a/pom.xml
+++ b/pom.xml
@@ -267,6 +267,21 @@
           </configuration>
         </plugin>
         <plugin>
+          <groupId>de.qaware.maven</groupId>
+          <artifactId>go-offline-maven-plugin</artifactId>
+          <version>1.1.0</version>
+            <configuration>
+              <dynamicDependencies>
+                <DynamicDependency>
+                  <groupId>org.apache.maven.surefire</groupId>
+                  <artifactId>surefire-junit-platform</artifactId>
+                  <version>2.22.2</version>
+                  <repositoryType>PLUGIN</repositoryType>
+                </DynamicDependency>
+              </dynamicDependencies>
+            </configuration>
+        </plugin>
+        <plugin>
           <groupId>com.mycila</groupId>
           <artifactId>license-maven-plugin</artifactId>
           <version>3.0</version>
@@ -313,6 +328,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>de.qaware.maven</groupId>
+        <artifactId>go-offline-maven-plugin</artifactId>
       </plugin>
       <plugin>
         <groupId>com.mycila</groupId>
