--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,9 @@
 #
 # Check https://circleci.com/docs/2.0/language-java/ for more details
 #
-version: 2
+version: 2.1
+orbs:
+  codecov: codecov/codecov@1.0.4
 jobs:
   build:
     docker:
@@ -42,3 +44,6 @@ jobs:
 
       - store_test_results:
           path: target/surefire-reports
+
+      - codecov/upload:
+          file: feignx-core/target/site/jacoco/jacoco.xml
