GH-16: Adding Test Module for Aggregate Code Coverage
Adding tests module for coverage report aggregation

The jacoco aggregate report plugin requires a module that
depends on all of the projects to aggregate.  This change
creates a new functional test module for that purpose.

Circle CI Configuration has been updated to report the
aggregate to Codecov

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <modules>
     <module>core</module>
+    <module>tests</module>
   </modules>
 
   <properties>
