--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,48 +2,40 @@
 #
 # Check https://circleci.com/docs/2.0/language-java/ for more details
 #
+
+# our job defaults
+defaults: &defaults
+  docker:
+    - image: circleci/openjdk:11.0.2
+  working_directory: ~/feignx
+  environment:
+    # Customize the JVM maximum heap limit
+    MAVEN_OPTS: -Xmx3200m
+
 version: 2.1
 orbs:
   codecov: codecov/codecov@1.0.4
 jobs:
   build:
-    docker:
-      # specify the version you desire here
-      - image: circleci/openjdk:11.0.2
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
-    working_directory: ~/feignx
-
-    environment:
-      # Customize the JVM maximum heap limit
-      MAVEN_OPTS: -Xmx3200m
-
+    <<: *defaults
     steps:
       - checkout
-
-      # Download and cache dependencies
       - restore_cache:
           keys:
             - feignx-dependencies-{{ checksum "pom.xml" }}
-            # fallback to using the latest cache if no exact match is found
             - feignx-dependencies-
-
-      - run: mvn go-offline:resolve-dependencies dependency:resolve-plugins dependency:go-offline
-
+      - run: mvn dependency:resolve-plugins go-offline:resolve-dependencies install -DskipTests=true
       - save_cache:
           paths:
             - ~/.m2
           key: feignx-dependencies-{{ checksum "pom.xml" }}
-
-      # run tests!
       - run: mvn -o test
-
       - store_test_results:
           path: target/surefire-reports
-
       - codecov/upload:
-          file: feignx-core/target/site/jacoco/jacoco.xml
+          file: tests/target/site/jacoco-aggregate/jacoco.xml
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build
