--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,7 @@
             <consoleOutput>true</consoleOutput>
             <failsOnError>true</failsOnError>
             <failOnViolation>true</failOnViolation>
+            <violationSeverity>warning</violationSeverity>
           </configuration>
           <executions>
             <execution>
