--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright 2019-2021 OpenFeign Contributors
+    Copyright 2019-2022 OpenFeign Contributors
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -34,7 +34,11 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <feign.basedir>${project.basedir}</feign.basedir>
-    <slf4j.version>1.7.30</slf4j.version>
+    <assertj.version>3.23.1</assertj.version>
+    <slf4j.version>1.7.36</slf4j.version>
+    <mockito.version>4.6.1</mockito.version>
+    <junit.version>5.8.2</junit.version>
+    <jackson.version>2.13.3</jackson.version>
   </properties>
 
   <distributionManagement>
@@ -59,17 +63,17 @@
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
-        <version>2.27.0</version>
+        <version>${mockito.version}</version>
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-junit-jupiter</artifactId>
-        <version>2.27.0</version>
+        <version>${mockito.version}</version>
       </dependency>
       <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
-        <version>3.12.2</version>
+        <version>${assertj.version}</version>
       </dependency>
       <dependency>
         <groupId>org.mock-server</groupId>
@@ -94,14 +98,14 @@
       <dependency>
         <groupId>org.junit</groupId>
         <artifactId>junit-bom</artifactId>
-        <version>5.4.2</version>
+        <version>${junit.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson</groupId>
         <artifactId>jackson-bom</artifactId>
-        <version>2.9.8</version>
+        <version>${jackson.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
